[gd_scene load_steps=8 format=3 uid="uid://cbsp8otdhuoty"]

[ext_resource type="PackedScene" uid="uid://bey6fhrbn55h0" path="res://node/actor/actor.tscn" id="1_mic32"]
[ext_resource type="Script" path="res://node/actor/party_actor.gd" id="2_0pyd1"]
[ext_resource type="Script" path="res://node/ui/action_menu.gd" id="3_g0sg8"]
[ext_resource type="Texture2D" uid="uid://chr8aoixol157" path="res://asset/ui/button_spacer.png" id="4_7v0vb"]
[ext_resource type="PackedScene" uid="uid://cfljfixiapbcy" path="res://node/ui/actionlist.tscn" id="5_ckstf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lha7k"]
atlas = ExtResource("4_7v0vb")
region = Rect2(8, 0, 8, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_lexh4"]
atlas = ExtResource("4_7v0vb")
region = Rect2(0, 0, 8, 18)

[node name="PartyActor" instance=ExtResource("1_mic32")]
wall_min_slide_angle = 0.0
script = ExtResource("2_0pyd1")

[node name="Collision" parent="." index="0"]
disabled = true

[node name="DuringTurn" parent="." index="3"]
visible = false

[node name="Spotlight" parent="DuringTurn" index="0"]
visible = false

[node name="ActionMenu" type="TabContainer" parent="DuringTurn" index="2"]
visible = false
z_index = 1
offset_left = 50.0
offset_top = -50.0
offset_right = 210.0
offset_bottom = 50.0
tabs_visible = false
script = ExtResource("3_g0sg8")

[node name="TypeChooser" type="VBoxContainer" parent="DuringTurn/ActionMenu" index="1"]
custom_minimum_size = Vector2(98, 0)
layout_mode = 2

[node name="Label" type="Label" parent="DuringTurn/ActionMenu/TypeChooser" index="0"]
layout_mode = 2
text = "Time to act!"

[node name="AttackContainer" type="HBoxContainer" parent="DuringTurn/ActionMenu/TypeChooser" index="1"]
layout_mode = 2

[node name="Attack" type="Button" parent="DuringTurn/ActionMenu/TypeChooser/AttackContainer" index="0"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "attack!"

[node name="Spacer" type="TextureRect" parent="DuringTurn/ActionMenu/TypeChooser/AttackContainer" index="1"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("4_7v0vb")

[node name="ItemContainer" type="HBoxContainer" parent="DuringTurn/ActionMenu/TypeChooser" index="2"]
layout_mode = 2

[node name="Spacer1" type="TextureRect" parent="DuringTurn/ActionMenu/TypeChooser/ItemContainer" index="0"]
layout_mode = 2
size_flags_vertical = 8
texture = SubResource("AtlasTexture_lha7k")

[node name="Item" type="Button" parent="DuringTurn/ActionMenu/TypeChooser/ItemContainer" index="1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "item"

[node name="Spacer2" type="TextureRect" parent="DuringTurn/ActionMenu/TypeChooser/ItemContainer" index="2"]
layout_mode = 2
size_flags_vertical = 8
texture = SubResource("AtlasTexture_lexh4")

[node name="GuardContainer" type="HBoxContainer" parent="DuringTurn/ActionMenu/TypeChooser" index="3"]
layout_mode = 2

[node name="Spacer" type="TextureRect" parent="DuringTurn/ActionMenu/TypeChooser/GuardContainer" index="0"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("4_7v0vb")

[node name="Guard" type="Button" parent="DuringTurn/ActionMenu/TypeChooser/GuardContainer" index="1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "guard"

[node name="Actions" parent="DuringTurn/ActionMenu" index="2" instance=ExtResource("5_ckstf")]
visible = false
layout_mode = 2

[node name="Inventory" parent="DuringTurn/ActionMenu" index="3" instance=ExtResource("5_ckstf")]
visible = false
layout_mode = 2

[node name="BacktrackTimer" type="Timer" parent="DuringTurn" index="3"]
wait_time = 0.15

[connection signal="hidden" from="DuringTurn/ActionMenu" to="DuringTurn/ActionMenu" method="set_current_tab" binds= [0]]
[connection signal="tab_changed" from="DuringTurn/ActionMenu" to="DuringTurn/ActionMenu" method="_on_tab_changed"]
[connection signal="visibility_changed" from="DuringTurn/ActionMenu" to="DuringTurn/ActionMenu" method="_on_visibility_changed"]
[connection signal="pressed" from="DuringTurn/ActionMenu/TypeChooser/AttackContainer/Attack" to="DuringTurn/ActionMenu" method="set_current_tab" binds= [1]]
[connection signal="pressed" from="DuringTurn/ActionMenu/TypeChooser/ItemContainer/Item" to="DuringTurn/ActionMenu" method="set_current_tab" binds= [2]]
[connection signal="pressed" from="DuringTurn/ActionMenu/TypeChooser/GuardContainer/Guard" to="DuringTurn/ActionMenu" method="_guard"]
